--- a/.travis.yml
+++ b/.travis.yml
@@ -2,18 +2,13 @@ language: java
 branches:
   only:
   - master
-before_script:
-  - wget http://central.maven.org/maven2/io/swagger/codegen/v3/swagger-codegen-cli/3.0.3/swagger-codegen-cli-3.0.3.jar -O swagger-codegen-cli.jar
-install: true
-jobs:
-  include:
-    - stage: build
-      script: lang=java && java -jar swagger-codegen-cli.jar generate -i petstore.json -l $lang -o $lang
-      script: lang=aspnetcore && java -jar swagger-codegen-cli.jar generate -i petstore.json -l $lang -o $lang
-    - stage: release
-      deploy:
-        provider: releases
-        api_key: $GITHUB_OAUTH_TOKEN
-        skip_cleanup: true
-        on:
-          tags: true
+install: wget http://central.maven.org/maven2/io/swagger/codegen/v3/swagger-codegen-cli/3.0.3/swagger-codegen-cli-3.0.3.jar -O swagger-codegen-cli.jar
+script:
+  - lang=java && java -jar swagger-codegen-cli.jar generate -i petstore.json -l $lang -o $lang
+  - lang=aspnetcore && java -jar swagger-codegen-cli.jar generate -i petstore.json -l $lang -o $lang
+deploy:
+  provider: releases
+  api_key: $GITHUB_OAUTH_TOKEN
+  skip_cleanup: true
+  on:
+    tags: true
